manifests/knative/v0.18.0/serving/controllers/istio/istio-webhook.peer-authentication.yaml
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "istio-webhook"
  namespace: "knative-serving"
spec:
  selector:
    matchLabels:
      app: istio-webhook
  mtls:
    mode: PERMISSIVE
