manifests/knative/v0.18.0/serving/controllers/istio/webhook.peer-authentication.yaml
# Allows the Webhooks to be reached by kube-api with or without
# sidecar injection and with mTLS PERMISSIVE and STRICT. 
apiVersion: "security.istio.io/v1beta1"
kind: "PeerAuthentication"
metadata:
  name: "webhook"
  namespace: "knative-serving"
spec:
  selector:
    matchLabels:
      app: webhook
  mtls:
    mode: PERMISSIVE
